_deploy/kustomize/base/deployment.yaml
---
# API SERVICE DEPLOYMENT MANIFEST
apiVersion: apps/v1
kind: Deployment

metadata:
  name: profile-service-api
  labels:
    app.kubernetes.io/name: profile-service-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: profile-service-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: profile-service-api
    spec:
      containers:
      - name: app
        image: profile-service-api-img
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 8080
